[package]
name = "vustreamproxy"
version = "0.1.0"
authors = ["Jedzia <jed69@gmx.de>"]
edition = "2018"

[dependencies]
#rand = "0.6.5"
hyper = "0.12.25"
pretty_env_logger = "0.2.0"
futures = "0.1"
log = "0.4.6"
bytes = "0.4.4"
tokio = "0.1.18"
tokio-io = "0.1.12"
tokio-process = "0.2"
#http = "0.1"