[package]
name = "vustreamproxy"
version = "0.1.0"
authors = ["Jedzia <jed69@gmx.de>"]
edition = "2018"

[dependencies]
#openssl-src = { path = "./dependencies/openssl-src-111.2.1+1.1.1b" }
#+++++++openssl-sys = { version = "0.9.12", features = ["vendored"] }
#openssl-sys = { version = "0.9.12", path = "./dependencies/openssl-sys-0.9.43", features = ["vendored"] }
#openssl = { version = "0.10", features = ["vendored"] }
####openssl = { version = "0.10", path = "./dependencies/openssl-0.10.20", features = ["vendored"] }
#openssl = { version = "0.10", path = "/dependencies./openssl-0.10.20" }
#rand = "0.6.5"
hyper = "0.12"
pretty_env_logger = "0.2"
futures = "0.1"
log = "0.4"
bytes = "0.4"
tokio = "0.1"
tokio-io = "0.1"
tokio-process = "0.2"
#reqwest = { version = "0.9.12", features = ["default-tls-vendored"] }
#reqwest = { version = "0.9.12", features = ["rustls-tls"] }
#reqwest = { version = "0.9.12", features = ["default-tls"] }
reqwest = { version = "0.9.12", features = ["tls"] }
#http = "0.1"
regex = "1.1"
lazy_static = "1.3"
#openssl-static-sys = { git = "git://github.com/alexcrichton/openssl-static-sys" }
#openssl-probe = "0.1.2"

#[target.'cfg(target_os = "windows")'.dependencies]
#openssl = { version = "0.10" }

[target.'cfg(target_os = "linux")'.dependencies]
# linked against ENV OPENSSL_DIR
openssl = { version = "0.10" }
# openssl uses openssl-src for local build
#openssl = { version = "0.10", features = ["vendored"] }

#openssl = { version = "0.10", features = ["vendored"] }
#openssl-sys = { version = "0.9.12", features = ["vendored"] }
#openssl-sys = { version = "0.9.43", features = ["vendored"] }

[patch.crates-io]
# when compiling local openssl use our MSYS fixed version
#openssl-src = { path = './dependencies/openssl-src-rs' }
# openssl-sys needs a local fixed variant for MinGW builds ... or set
# env("OPENSSL_LIBS"); "ssl", "crypto" -> "ssl:crypto"
#openssl-sys = { path = './dependencies/openssl-sys-0.9.43' }

#[replace]
#"openssl-src:110.0.0" = { path = './dependencies/openssl-src-111.2.1+1.1.1b' }
#"openssl-sys:0.9.12" = { path = './dependencies/openssl-sys-0.9.43', features = ["vendored"] }
#"openssl:0.10.20" = { path = './dependencies/openssl-0.10.20' }
